# kuri_mbzirc_challenge_3

./: .travis.yml  README.md  mbzirc_challenge3.rosinstall
aerial_manipulation/: CMakeLists.txt  package.xml
arena_exploration/: CMakeLists.txt  package.xml
kuri_aerial_manipulation/: CMakeLists.txt  package.xml
kuri_aerial_manipulation/config/: controller.yaml
kuri_aerial_manipulation/include/: AerialManipulationControl.h
kuri_aerial_manipulation/scripts/: aerial_manipulation_test.py  client.py  gripper_node.py  test1.py
kuri_aerial_manipulation/src/: ActionServerInterface.cpp  AerialManipulationControl.cpp  object_manipulation_task.cpp  uav_img2pointcloud.cpp
kuri_aerial_manipulation/srv/: Attach.srv
kuri_arena_exploration/: CMakeLists.txt  package.xml
kuri_arena_exploration/include/: exploration_waypoints.h
kuri_arena_exploration/scripts/: Exploration.py  ExploreActionServer.py  exploration.py  explore_action_server.py  server.py  testclient.py
kuri_arena_exploration/src/: exploration_waypoints.cpp  exploration_waypoints_action_server.cpp
kuri_mbzirc_challenge_3/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_3/launch/: task.launch
kuri_mbzirc_challenge_3/scripts/: land_uav_1.py  uav_1.py  uav_2.py  uav_3.py
kuri_mbzirc_challenge_3/src/: CD.cpp
kuri_mbzirc_challenge_3/test/: integration.test  test_aerial_mani.py  test_objects_detection.py
kuri_multi_agent_navigation/: CMakeLists.txt  package.xml
kuri_multi_agent_navigation/include/: geo.h  pathgenerator.h
kuri_multi_agent_navigation/launch/: navigator.launch
kuri_multi_agent_navigation/scripts/: exploration_testclient.py  path_follower_test.py
kuri_multi_agent_navigation/src/: converter_action_server_copy.cpp  gps_waypoints_local.cpp  gps_waypoints_srv copy.cpp  navigation_action_server.cpp  navigator_node.cpp
kuri_multi_uav_navigation/: CMakeLists.txt  package.xml
kuri_multi_uav_navigation/config/: waypoints_map_ref.yaml
kuri_multi_uav_navigation/include/: Navigator.h  Navigator.h~  geo.h  navigator.h  pathgenerator.h
kuri_multi_uav_navigation/launch/: converter.launch  distance_heuristic_task3.launch~  exploration_gps.launch  pathplanner.launch  task-b.launch~
kuri_multi_uav_navigation/scripts/: navigator_test.py  path_planner_test.py  pos_sub.py  task_pub.py  uav_1.py  uav_2.py  uav_3.py
kuri_multi_uav_navigation/src/: GeneratePathsAction.cpp  [old]pathplanner.cpp  converter_action_server.cpp  gps_waypoints_local.cpp  gps_waypoints_srv.cpp  navigation_action_server.cpp  navigator.cpp  pathfollower.cpp  pathgenerator.cpp  pathplanner.cpp  pathplanner_action_server.cpp  uavs_initiator.cpp
kuri_multi_uav_navigation/test/: test_path_planner.py  try_path_planner_navigator.py
kuri_object_tracking/: CMakeLists.txt  package.xml
kuri_object_tracking/config/: colors.yaml  simulator.yaml
kuri_object_tracking/launch/: buti.launch  drop_zone.launch  pick_test.launch
kuri_object_tracking/scripts/: LocalTracking.py  LocalTracking.py~  ObjectDetector.py  ObjectTracker.py  ObjectTracking.py  ObjectTracking.py~  Obstacle.py  TrackingActionServer.py  cv_test.py  cv_test.py~  dropzone_landing.py  extract_colors.py  local_tracking.py  object_detector.py  object_picktest.py  object_tracking.py  object_tracking_solo.py  rosbag_detector.py  singleobject_tracker.py  testclient.py  testdropzone.py  tracker.py~  tracking_action_server.py  uav_1.py  uav_3.py  ultraking.py  ultraking.py~
kuri_object_tracking/srv/: Object2Track.srv
kuri_objects_mapping/: CMakeLists.txt  package.xml
kuri_objects_mapping/config/: static_map.yaml
kuri_objects_mapping/include/: occupancy_mapping.h
kuri_objects_mapping/launch/: static_mapping_action_server.launch
kuri_objects_mapping/rviz/: static_map.rviz
kuri_objects_mapping/scripts/: MappingActionServer.py  ObjectsMapping.py  mapping_action_server.py  objects_mapping.py  testclient.py
kuri_objects_mapping/src/: action_client_occupancy_mapping.cpp  action_server_occupancy_mapping.cpp  occupancy_mapping.cpp
kuri_position_estimation/: CMakeLists.txt  package.xml
kuri_system_coordinator/: CMakeLists.txt  package.xml
kuri_system_coordinator/config/: controller.yaml  exploration_waypoints_100.txt  exploration_waypoints_50.txt  integration_test.rviz
kuri_system_coordinator/launch/: explorer.launch  integration_test.launch  navigators.launch  navigators_new.launch  solo_players.launch  state_machine_test.launch
kuri_system_coordinator/scripts/: explore.py  main_system_coordinator.py  system_coordinator.py  test.py  test_system_coordinator.py  uav_explorer_states.py  uav_worker_states.py  util_states.py
kuri_system_coordinator/src/: geo.cpp  soloplayer.cpp
kuri_task_allocation/: CMakeLists.txt  package.xml
kuri_task_allocation/config/: weight.yaml
kuri_task_allocation/scripts/: action_server_task_allocator.py  ros_task_allocator.py  task_allocator.py  task_allocator_action_server.py  task_aloc_test.py  tester.py  tester.py~
kuri_task_allocation/test/: task_allocator_interface_test.py  tester.py
kuri_util_scripts/bash/: setpoints_test.sh  takeoff_test.sh
kuri_util_scripts/scripts/: plot_gps_data.py
scripts/: image_analysis.py
