<?xml version="1.0"?>
<package>
  <name>arena_exploration</name>
  <version>0.0.1</version>
  <description>My package description</description>
  <maintainer email="email@email.com">My Name</maintainer>
  <license>LGPLv3</license>
  <url type="website">https://github.com/kuri-kustar/kuri_mbzirc_challenge_3/wiki</url>

  <author email="email@email.com">My Name</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>