<?xml version="1.0"?>
<package>
  <name>kuri_aerial_manipulation</name>
  <version>0.0.1</version>
  <description>My package description</description>
  <maintainer email="email@email.com">My Name</maintainer>
  <license>LGPLv3</license>
  <url type="website">https://github.com/kuri-kustar/kuri_mbzirc_challenge_3/wiki</url>

  <author email="email@email.com">My Name</author>

  <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
 <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>kuri_mbzirc_sim</build_depend>
  <build_depend>gazebo_ros</build_depend>
<build_depend> kuri_msgs </build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>kuri_msgs</run_depend>
  <run_depend>kuri_mbzirc_sim</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <export>
  </export>
</package>
