<?xml version="1.0"?>
<package>
  <name>kuri_arena_exploration</name>
  <version>0.0.1</version>
  <description>MBZIRC Object Tracking</description>
  <maintainer email="buti.aldelail@kustar.ac.ae">Buti Al Delail</maintainer>
  <license>LGPLv3</license>
  <url type="website">https://github.com/kuri-kustar/kuri_mbzirc_challenge_3/wiki</url>

  <author email="buti.aldelail@kustar.ac.ae">Buti Al Delail</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
