<?xml version="1.0"?>
<package>
  <name>kuri_mbzirc_challenge_3</name>
  <version>0.1.0</version>
  <description>MBZIRC Challenge 3 related code</description>

  <maintainer email="tarek@tarektaha.com">Tarek Taha</maintainer>
  
  <license>BSD</license>

  <url type="website">https://github.com/kuri-kustar</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>kuri_mbzirc_sim</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>kuri_mbzirc_sim</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
  </export>
</package>
