<?xml version="1.0"?>
<package>
  <name>kuri_multi_agent_navigation</name>
  <version>0.0.1</version>
  <description>This component is respobsible for controlling the uavs in a way that gaurantees safe routing</description>
  <maintainer email="ahmed.aldhanhani@kustar.ac.ae">Ahmed AlDhanhani</maintainer>
  <license>LGPLv3</license>
  <url type="website">https://github.com/kuri-kustar/kuri_mbzirc_challenge_3/wiki</url>

  <author email="ahmed.aldhanhani@kustar.ac.ae">Ahmed AlDhanhani</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl1-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>kuri_msgs</build_depend>
  <build_depend>sspp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl1</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sspp</run_depend>
  <run_depend>kuri_msgs</run_depend>
  <export>
  </export>
</package>
