<?xml version="1.0"?>
<package>
  <name>kuri_objects_mapping</name>
  <version>0.0.1</version>
  <description>MBZIRC Object Tracking</description>
  <maintainer email="buti.aldelail@kustar.ac.ae">Buti Al Delail</maintainer>
  <license>LGPLv3</license>
  <url type="website">https://github.com/kuri-kustar/kuri_mbzirc_challenge_3/wiki</url>

  <author email="buti.aldelail@kustar.ac.ae">Buti Al Delail</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
 <build_depend>actionlib_msgs</build_depend>
 <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
 <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
 <run_depend>actionlib_msgs</run_depend>
 <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
